--- a/FJExample/Page.xaml
+++ b/FJExample/Page.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="FJExample.Page"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
-    <Grid x:Name="LayoutRoot" Background="White">
+    <Grid x:Name="LayoutRoot" Background="White" MinWidth="200" MinHeight="200">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
@@ -12,8 +12,9 @@
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        
-        <Button Click="Button_Click" Grid.ColumnSpan="2" Content="Open..."/>
+
+        <Button Click="Button_Click"  Content="Open..."/>
+        <Button Click="btnSave_Click"  Content="Save..." Grid.Column="1"/>
 
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Foreground="#bbbbbb" Text="Input"/>
         <TextBlock x:Name="OutputText" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Foreground="#bbbbbb" Grid.Column="1" Text="Output"/>
